# GoIT_H5_NBP_exchange_rate

./: .gitignore  README.md  pyproject.toml
goit_h5_nbp_exchange_rate/: cli_exchange_rate.py
goit_h5_nbp_exchange_rate/utilities/: nbp_exchange_rate_tools.py
goit_h5_nbp_exchange_rate/websockets_chat/: websockets_server.py
